# agents_invest

./: .gitignore  README.md  START_HERE_ko.md  agents_invest_runner.py  pyproject.toml
config/: runtime.example.env
dashboard/: app.js  candidate_render_patch.js  green_status_patch.js  hide_repeated_candidate_label.js  index.html  ops_patch.js  portfolio_chart_axis_patch.js  recommendation_history_patch.js  risk_patch.js  status.json  styles.css  ui_tune_patch.js  visual_polish_patch.js
db/: candidate_performance_tracker.sql
docs/: ADAPTER_WIRING_GUIDE_ko.md  ADAPTIVE_STRATEGY_ko.md  AGENT_ENHANCEMENT_MATRIX_ko.md  AWS_24H_OPERATION_ko.md  AWS_CLOUDFORMATION_QUICKSTART_ko.md  AWS_CONSOLE_CHECKLIST_ko.md  AWS_EC2_SETUP_ko.md  CLOUDSHELL_ATTACH_SSM_ROLE_ko.md  CLOUDSHELL_COPY_PASTE_SSM_ROLE_COMMAND_ko.md  CLOUDSHELL_VERIFY_SSM_READY_ko.md  DASHBOARD_ko.md  EC2_COMMANDS_QUICK_HELP_ko.md  EC2_ONE_COMMAND_REPAIR_ko.md  EC2_SSH_FALLBACK_ko.md  GITHUB_ACTIONS_BUTTONS_ko.md  GITHUB_ACTIONS_PRISM_INTEGRATION_ko.md  IMPLEMENTATION_MAP_ko.md  LICENSING_NOTICE_ko.md  LIVE_SAFETY_GATES_ko.md  NEXT_STEPS_ko.md  RUNTIME_SECRETS_ko.md  RUNTIME_SECRET_INPUT_ko.md  SSM_SESSION_MANAGER_TROUBLESHOOTING_ko.md  TELEGRAM_SETUP_ko.md  UPSTREAM_MERGE_PLAYBOOK_ko.md  ai_win_backtest_policy.md
optimization/: __init__.py  adapters.py  paper_validator.py  performance_feedback.py  profit_scoring.py  risk_governor.py
runtime/: __init__.py  candidate_history.py  portfolio_tracker.py  preflight.py  prism_adaptive_strategy.py  prism_krx_data_client.py  safety.py  secrets.py  settings.py  ssm.py
scripts/: apply_ai_win_portfolio_guard.py  check_integration.py  check_prism_krx_compat.py  check_prism_runtime_imports.py  check_workflow_triggers.py  configure_runtime_secrets.py  configure_telegram.py  diagnose_ai_win_deployment.py  diagnose_ec2_runtime.sh  explain_recommendation.py  export_dashboard_status.py  generate_ai_win_recommendations.py  generate_openai_recommendation_risks.py  install_adaptive_strategy_timer.sh  install_daily_ai_win_timer.sh  operator_status.sh  (+18 more)
(+39 files in other folders)
