[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agents-invest"
version = "0.1.0"
description = "Optimization add-ons for PRISM-INSIGHT based trading workflows"
requires-python = ">=3.9"
dependencies = [
    "finance-datareader>=0.9.96",
    "numpy>=1.26",
    "pandas>=2.0",
    "python-dotenv>=1.0",
    "pykrx==1.0.48",
    "requests>=2.31",
]

[project.optional-dependencies]
aws = ["boto3>=1.34"]
test = ["pytest>=8.0"]

[tool.setuptools]
py-modules = ["agents_invest_runner"]

[tool.setuptools.packages.find]
include = ["optimization*", "runtime*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"
